--- a/index.html
+++ b/index.html
@@ -1,94 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>VK Cash</title>
   <style>
     body {
-      background: #111;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #111;
+      color: #fff;
+      text-align: center;
     }
     h1 {
+      font-size: 36px;
       color: #337aff;
-      padding-top: 30px;
+      margin-top: 30px;
     }
-    .button {
+    #wheel-container {
+      margin: 20px auto;
+      width: 300px;
+      height: 300px;
+      position: relative;
+    }
+    #wheel {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 10px solid #00aa40;
+      background: conic-gradient(
+        #e74c3c 0deg 72deg,
+        #f1c40f 72deg 144deg,
+        #2ecc71 144deg 216deg,
+        #3498db 216deg 288deg,
+        #7f8c8d 288deg 360deg
+      );
+      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
+    }
+    button {
+      margin-top: 20px;
+      font-size: 18px;
+      padding: 12px 30px;
       background-color: #00aa40;
       border: none;
       color: white;
-      padding: 15px 25px;
-      margin: 10px;
-      font-size: 16px;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    .button:hover {
-      background-color: #007a2f;
+    button:disabled {
+      background-color: #666;
+      cursor: not-allowed;
     }
-    #wheel {
-      width: 250px;
-      height: 250px;
-      border: 8px solid #00aa40;
-      border-radius: 50%;
-      margin: 20px auto;
-      position: relative;
-      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
-    }
-    #wheel span {
-      position: absolute;
-      width: 50%;
-      height: 50%;
-      background: #00aa40;
-      color: white;
-      font-size: 20px;
-      text-align: center;
-      line-height: 125px;
-      transform-origin: 100% 100%;
-      border-right: 2px solid #000;
-    }
-    #pointer {
-      width: 0;
-      height: 0;
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-      border-bottom: 30px solid red;
-      margin: 0 auto;
-    }
-    #result {
-      font-size: 24px;
+    .result {
+      font-size: 22px;
       margin-top: 20px;
     }
     .info-buttons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
       margin-top: 30px;
     }
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-    }
-    .modal-content {
-      background: #222;
-      margin: 10% auto;
-      padding: 20px;
-      width: 80%;
-      border-radius: 8px;
-      color: #fff;
-    }
-    .close {
-      float: right;
-      font-size: 24px;
+    .info-buttons button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: #333;
+      border: none;
+      color: white;
+      border-radius: 5px;
       cursor: pointer;
     }
     .top-winners {
@@ -99,28 +74,64 @@
       padding: 0;
       font-size: 18px;
     }
+    #code {
+      margin-top: 15px;
+      font-weight: bold;
+      color: #FFD700;
+    }
+    #modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    #modalContent {
+      background: #222;
+      padding: 30px;
+      max-width: 90%;
+      max-height: 80%;
+      overflow-y: auto;
+      border-radius: 10px;
+      text-align: left;
+      color: #fff;
+    }
+    #modalContent h2 {
+      text-align: center;
+      margin-top: 0;
+    }
+    #modalClose {
+      margin-top: 20px;
+      background-color: #FFD700;
+      color: black;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
   <h1>Добро пожаловать в VK Cash!</h1>
 
-  <div id="pointer"></div>
-  <div id="wheel">
-    <span style="transform: rotate(0deg);">50₽</span>
-    <span style="transform: rotate(72deg);">100₽</span>
-    <span style="transform: rotate(144deg);">200₽</span>
-    <span style="transform: rotate(216deg);">500₽</span>
-    <span style="transform: rotate(288deg);">0₽</span>
+  <div id="wheel-container">
+    <div id="wheel"></div>
   </div>
-  <button class="button" id="spinBtn">Крутить колесо</button>
-  <button class="button" onclick="location.href='https://widget.donatepay.ru/widgets/page/7549bd7deeb167c930b7ab588b1aa54aa82e2910567619e1a834984b89495cf5?widget_id=6642901&sum=50'">Оплатить 50₽</button>
-  <button class="button" onclick="location.href='https://t.me/ZaberiMANY_Bot'">Забрать выигрыш</button>
+
+  <button id="spinBtn" onclick="spin()">Крутить колесо</button>
+  <button id="payBtn" onclick="pay()" style="display:none;">Попробовать снова за 50₽</button>
+
+  <div class="result" id="result"></div>
+  <div id="code"></div>
 
   <div class="info-buttons">
-    <button class="button" onclick="openModal('rules')">📜 Правила участия</button>
-    <button class="button" onclick="openModal('faq')">❓ FAQ</button>
-    <button class="button" onclick="openModal('policy')">📋 Политика</button>
+    <button onclick="showModal('rules')">📜 Правила участия</button>
+    <button onclick="showModal('faq')">❓ FAQ</button>
+    <button onclick="showModal('policy')">📋 Политика</button>
   </div>
 
   <div class="top-winners">
@@ -134,78 +145,104 @@
     </ul>
   </div>
 
-  <!-- Модалки -->
-  <div class="modal" id="rules">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal('rules')">&times;</span>
-      <h2>📜 Правила участия</h2>
-      <p>Крути колесо и получай шанс на выигрыш. Первая прокрутка бесплатная, далее требуется оплата. Выигрыш можно забрать через Telegram-бота.</p>
+  <div id="modal">
+    <div id="modalContent">
+      <h2 id="modalTitle"></h2>
+      <div id="modalText"></div>
+      <button id="modalClose" onclick="closeModal()">Закрыть</button>
     </div>
   </div>
-
-  <div class="modal" id="faq">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal('faq')">&times;</span>
-      <h2>❓ FAQ</h2>
-      <p>Вы можете выиграть реальные деньги. Получение происходит через Telegram-бота после подтверждения оплаты.</p>
-    </div>
-  </div>
-
-  <div class="modal" id="policy">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal('policy')">&times;</span>
-      <h2>📋 Политика</h2>
-      <p>Сервис создан в развлекательных целях. Все действия подтверждаются добровольно. Возврат средств не осуществляется.</p>
-    </div>
-  </div>
-
-  <div id="result"></div>
 
   <script>
-    let firstSpinFree = true;
-    const spinBtn = document.getElementById('spinBtn');
-    const wheel = document.getElementById('wheel');
-    const result = document.getElementById('result');
+    let spinning = false;
+    let firstSpin = true;
+    let currentRotation = 0;
 
-    spinBtn.addEventListener('click', () => {
-      if (!firstSpinFree) {
-        alert("Для следующей попытки нужно оплатить 50₽");
+    const wheel = document.getElementById("wheel");
+    const resultEl = document.getElementById("result");
+    const spinBtn = document.getElementById("spinBtn");
+    const payBtn = document.getElementById("payBtn");
+    const codeBlock = document.getElementById("code");
+
+    const prizes = [50, 0, 0, 0, 0]; // Только первая попытка гарантированно 50₽
+
+    function spin() {
+      if (spinning) return;
+
+      if (!firstSpin) {
+        alert("Для новой попытки нужно оплатить 50₽.");
         return;
       }
-      let randomDegree = 3600 + Math.floor(Math.random() * 360);
-      wheel.style.transform = `rotate(${randomDegree}deg)`;
-      let prizes = ["50₽", "100₽", "200₽", "500₽", "0₽"];
-      let index = Math.floor(((randomDegree % 360) + 36) / 72) % 5;
+
+      spinning = true;
+      spinBtn.disabled = true;
+      resultEl.innerHTML = "Крутим...";
+      codeBlock.innerHTML = "";
+
+      const prizeIndex = firstSpin ? 0 : Math.floor(Math.random() * prizes.length);
+      const prize = prizes[prizeIndex];
+      const angle = 360 * 5 + prizeIndex * 72 + 36;
+      currentRotation += angle;
+
+      wheel.style.transform = `rotate(${currentRotation}deg)`;
+
       setTimeout(() => {
-        let prize = prizes[index];
-        if (prize === "0₽") {
-          result.innerHTML = "Увы, ничего не выпало. Попробуй снова!";
+        spinning = false;
+        firstSpin = false;
+        spinBtn.disabled = true;
+        payBtn.style.display = "inline-block";
+
+        if (prize === 0) {
+          resultEl.innerHTML = "😢 Увы, ничего не выпало. Попробуй снова!";
         } else {
-          result.innerHTML = `🎉 Ты выиграл ${prize}`;
+          resultEl.innerHTML = `🎉 Ты выиграл ${prize}₽! Забери выигрыш у <a href="https://t.me/ZaberiMANY_Bot" target="_blank">бота</a>`;
+          const code = generateCode();
+          codeBlock.innerText = `🎫 Код подтверждения: ${code}`;
         }
-        firstSpinFree = false;
-      }, 5200);
-    });
-
-    function openModal(id) {
-      document.getElementById(id).style.display = 'block';
+      }, 5000);
     }
 
-    function closeModal(id) {
-      document.getElementById(id).style.display = 'none';
+    function pay() {
+      window.open("https://widget.donatepay.ru/widgets/page/7549bd7deeb167c930b7ab588b1aa54aa82e2910567619e1a834984b89495cf5?widget_id=6642901&sum=50", "_blank");
+      // После оплаты пользователь вручную обновляет страницу или вводит код в бота
     }
 
-    // Автообновление топа
+    function generateCode() {
+      const timestamp = Date.now();
+      const random = Math.random().toString(36).substring(2, 6).toUpperCase();
+      return `CODE-50-${timestamp}-${random}`;
+    }
+
+    function showModal(type) {
+      const titles = {
+        rules: "📜 Правила участия",
+        faq: "❓ Часто задаваемые вопросы",
+        policy: "📋 Политика"
+      };
+      const contents = {
+        rules: "<ul><li>Первая прокрутка — бесплатная</li><li>Повторная — 50₽</li><li>Суммы выигрышей — от 50₽ до 500₽</li></ul>",
+        faq: "<ul><li>Как играть? Нажмите 'Крутить колесо'</li><li>Как снова сыграть? Нажмите 'Попробовать снова'</li><li>Как получить деньги? Через Telegram-бота после оплаты</li></ul>",
+        policy: "<ul><li>Развлекательный проект</li><li>Результаты случайны</li><li>Возврата средств нет</li></ul>"
+      };
+      document.getElementById("modalTitle").innerText = titles[type];
+      document.getElementById("modalText").innerHTML = contents[type];
+      document.getElementById("modal").style.display = "flex";
+    }
+
+    function closeModal() {
+      document.getElementById("modal").style.display = "none";
+    }
+
     setInterval(() => {
-      const fakeNames = ["Сергей", "Ника", "Игорь", "Оля", "Максим", "Таня"];
-      let list = document.getElementById('winners');
+      const names = ["Сергей", "Ирина", "Олег", "Мария", "Максим", "Таня"];
+      const list = document.getElementById("winners");
       list.innerHTML = "";
       for (let i = 0; i < 5; i++) {
-        const name = fakeNames[Math.floor(Math.random() * fakeNames.length)];
+        const name = names[Math.floor(Math.random() * names.length)];
         const amount = Math.floor(Math.random() * 450) + 50;
         list.innerHTML += `<li>${name} — ${amount}₽</li>`;
       }
-    }, 300000); // каждые 5 минут
+    }, 300000);
   </script>
 
 </body>
